Fix overflow problem

--- a/mine.css
+++ b/mine.css
@@ -6,6 +6,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .multiline-content {
     white-space: pre-wrap;
+    word-break: break-word;
 }
 
 
